fix: overflow in code segments

--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ code {
     background-color: #f2f2f2;
     color: #222;
     border-radius: 3px;
+    overflow:auto;
 }
 
 .highlight,
